@@ -1,6 +1,7 @@
 *.pyc
 milk/supervised/_svm.so
 milk/supervised/_tree.so
+milk/supervised/_perceptron.so
 milk/unsupervised/_som.so
 milk/unsupervised/_kmeans.so
 build
